# image-orientation-detection

./: .gitignore  README.md  download.py  download.sh  export.py  pyproject.toml  run.py  test.txt  train.txt
eval/: Dockerfile  go.mod  go.sum  main.go
